Weird overflow issue in masonry gallery, hiding causes no issues

--- a/style.css
+++ b/style.css
@@ -576,6 +576,10 @@ body {
 }
 
 /* Gallery Page */
+body:has(.gallery-header) {
+    overflow-x: hidden;
+}
+
 .gallery-header {
     position: relative;
     width: 100vw;
